Label changes from Claude

--- a/CalendarMonger/index.html
+++ b/CalendarMonger/index.html
@@ -19,6 +19,7 @@
           </button>
           <select id="monthPicker" class="p-2"></select>
           <select id="yearPicker" class="p-2"></select>
+          <button id="clearRangesButton" class="secondary-button">Clear All Ranges</button>
         </div>
       </div>
       <div id="selectedMonth" class="month-container calendar-grid"></div>
