--- a/CalendarMonger/index.html
+++ b/CalendarMonger/index.html
@@ -14,12 +14,12 @@
     <div class="container mx-auto p-4" style="width: 75%">
       <div class="flex justify-end items-center mb-4">
         <div class="flex gap-2">
+          <button id="clearRangesButton" class="secondary-button">Clear Ranges</button>
           <button id="todayButton" class="p-2 bg-blue-500 text-white rounded">
             Today
           </button>
           <select id="monthPicker" class="p-2"></select>
           <select id="yearPicker" class="p-2"></select>
-          <button id="clearRangesButton" class="secondary-button">Clear All Ranges</button>
         </div>
       </div>
       <div id="selectedMonth" class="month-container calendar-grid"></div>
