--- a/CalendarMonger/index.html
+++ b/CalendarMonger/index.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </div>
+    <script src="color-picker.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
